added geo blacklist to swagger
