# docs/swagger.json
@@ -14,6 +14,125 @@
         "version": "v0.8.0"
     },
     "paths": {
+        "/v1/blacklist/countries": {
+            "get": {
+                "description": "get all blacklisted countries",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blacklist"
+                ],
+                "summary": "Get blacklisted countries",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetCountriesResp"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "upsert countries to blacklist",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blacklist"
+                ],
+                "summary": "Upsert blacklisted countries",
+                "parameters": [
+                    {
+                        "description": "countries to add",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.UpsertCountriesReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "description": "remove countries from blacklist",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blacklist"
+                ],
+                "summary": "Remove blacklisted countries",
+                "parameters": [
+                    {
+                        "description": "countries to remove",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.RemoveCountriesReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/v1/blacklist/countries/{country}": {
+            "get": {
+                "description": "check if a country is blacklisted",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blacklist"
+                ],
+                "summary": "Check blacklisted country",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "country to check",
+                        "name": "country",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CheckCountryResp"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/blacklist/domains": {
             "get": {
                 "description": "get all blacklisted domains",
@@ -498,6 +617,14 @@
         }
     },
     "definitions": {
+        "api.CheckCountryResp": {
+            "type": "object",
+            "properties": {
+                "found": {
+                    "type": "boolean"
+                }
+            }
+        },
         "api.CheckDomainResp": {
             "type": "object",
             "properties": {
@@ -514,6 +641,21 @@
                 }
             }
         },
+        "api.GetCountriesResp": {
+            "type": "object",
+            "properties": {
+                "countries": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "fr",
+                        "de"
+                    ]
+                }
+            }
+        },
         "api.GetDomainsResp": {
             "type": "object",
             "properties": {
@@ -521,7 +663,11 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "bad.com",
+                        "dead.com"
+                    ]
                 }
             }
         },
@@ -532,7 +678,26 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "100.100.100.100/32",
+                        "200.200.200.0/24"
+                    ]
+                }
+            }
+        },
+        "api.RemoveCountriesReq": {
+            "type": "object",
+            "properties": {
+                "countries": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "fr",
+                        "de"
+                    ]
                 }
             }
         },
@@ -543,7 +708,11 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "bad.com",
+                        "dead.com"
+                    ]
                 }
             }
         },
@@ -554,7 +723,26 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "100.100.100.100",
+                        "200.200.200.0/24"
+                    ]
+                }
+            }
+        },
+        "api.UpsertCountriesReq": {
+            "type": "object",
+            "properties": {
+                "countries": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "fr",
+                        "de"
+                    ]
                 }
             }
         },
@@ -565,7 +753,11 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "bad.com",
+                        "dead.com"
+                    ]
                 }
             }
         },
@@ -576,7 +768,11 @@
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "100.100.100.100",
+                        "200.200.200.0/24"
+                    ]
                 }
             }
         }
